--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,11 +75,98 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7cbabb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Order Statistics.\n",
+      "Total Number of Orders: 1\n",
+      "Perecentage of Unique  Products Ordered: 0.2%\n",
+      "\n",
+      " Updated Inventory:\n",
+      "t-shirt: 4\n",
+      "mug: 4\n",
+      "hat: 4\n",
+      "book: 3\n",
+      "keychain: 4\n",
+      "\n",
+      " Total Price: 1.0¢ \n"
+     ]
+    }
+   ],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    inventory = {\n",
+    "        product: int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "        for product in products\n",
+    "    }\n",
+    "    return inventory\n",
+    "\n",
+    "def get_customer_orders():\n",
+    "    num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "    orders = [\n",
+    "        input(\"Enter the name of the products that the customer want orders: \")\n",
+    "        .strip()\n",
+    "        .lower()\n",
+    "        for _ in range (num_orders)\n",
+    "\n",
+    "    ]\n",
+    "    return orders\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "        prices = {\n",
+    "            product: float(input(f\"Enter the price of {product}: \"))\n",
+    "            for product in customer_orders\n",
+    "        }\n",
+    "        total = sum(prices.values())\n",
+    "        return total    \n",
+    "\n",
+    "def update_inventory(inventory, customer_orders):\n",
+    "    for product in customer_orders:\n",
+    "        if product in inventory:\n",
+    "            inventory[product] -= 1\n",
+    "    \n",
+    "    new_inventory = {product: quantity for product, quantity in inventory.items() if quantity > 0}\n",
+    "    inventory = new_inventory\n",
+    "    return inventory\n",
+    "\n",
+    "\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "\n",
+    "customer_orders = get_customer_orders()\n",
+    "\n",
+    "unique_orders = set(customer_orders)\n",
+    "total_ordered = len(customer_orders)\n",
+    "percentage_ordered = (len(unique_orders) / len(products)) * 1\n",
+    "\n",
+    "print(f\"\\n Order Statistics.\")\n",
+    "print(f\"Total Number of Orders: {total_ordered}\")\n",
+    "print(f\"Perecentage of Unique  Products Ordered: {percentage_ordered:.1f}%\")\n",
+    "\n",
+    "inventory = update_inventory(inventory, customer_orders)\n",
+    "\n",
+    "print(\"\\n Updated Inventory:\")\n",
+    "for product, quantity in inventory.items():\n",
+    "    print(f\"{product}: {quantity}\")\n",
+    "\n",
+    "total_price = calculate_total_price(unique_orders)    \n",
+    "print(f\"\\n Total Price: {total_price}¢ \")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
